fix: reverse background image on mobile

--- a/practice/src/css/sections/best-place.css
+++ b/practice/src/css/sections/best-place.css
@@ -7,10 +7,12 @@
   height: 380px;
   border-radius: var(--primary-border-radius);
   border: 1px solid var(--secondary-border-color);
+  transform: scaleX(-1);
 }
 
 .tab-nav {
   padding-top: 330px;
+  transform: scaleX(-1);
 }
 
 .place-introduction {
@@ -177,6 +179,8 @@
   .place-introduction {
     display: block;
     width: 328px;
+    transform: scaleX(-1);
+    margin-left: auto;
   }
   
   .tab-nav {
